Stack technology -Jade

--- a/references.bib
+++ b/references.bib
@@ -1758,3 +1758,11 @@ URN: urn:nbn:de:0114-fqs0501297},
   Timestamp                = {2015.10.12}
 }
 
+@Electronic{jade,
+  Title                    = {To Engineers Who Tried to Use Jade Template Engine and Can’t Get Started},
+  Url                      = {http://webapplog.com/jade/},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.14}
+}
+
