--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -205,7 +205,11 @@
 		\item Ευελιξία. Η διαθεσιμότητα τόσο των ασφαλών πόρων του ιδιωτικού cloud και όσο και των οικονομικότερων των δημοσίων cloud, παρέχει στους οργανισμούς περισσότερες ευκαιρίες για να εξερευνήσουν διαφορετικές επιχειρησιακές κατευθύνσεις.
 		\end{itemize} 
 		
-		
+			\subsubsection{Cloud και ασφάλεια Ιατρικών δεδομένων?}
+				
+				
+			\cite{Kaufm2009}					
+				
 		\subsection{NodeJs}
 	
 		Το Node.js είναι μια πλατφόρμα που μας επιτρέπει να γράψουμε JavaScript στην πλευρά του εξυπηρετητή (server-side JavaScript). Από το 2009 που δημιουργήθηκε μέχρι σήμερα η πλατφόρμα έχει εξελιχθεί ραγδαία και χρησιμοποιείται σε πολλές μεγάλες εφαρμογές. Αποτελεί αυτήν την στιγμή το δεύτερο σε επισκεψιμότητα πρότζεκτ στο GitHub και έχει παραπάνω από 90000 πακέτα (modules) που έχουν δημοσιευτεί στον διαχειριστή πακέτων του Node (Node Package Manager, NPM). Οι NodeJs εφαρμογές είναι γραμμένες σε JavaScript και μπορούν να εκτελεστούν σε OS X, Microsoft Windows, Linux, FreeBSD, NonStop, IBM AIX, IBM System z και IBM i. Το πρότζεκτ του NodeJs φιλοξενείται και υποστηρίζεται από το Node.js Foundation,  ένα συλλογικό έργο στο  Linux Foundation. \cite{Tilkov2010}
@@ -271,8 +275,13 @@
 
 		Το σύνολο όλων των πακέτων που έχουν φτιάξει και δημοσιοποιήσει οι προγραμματιστές διατηρείται σε μία κεντρική αποθήκη από τον διαχειριστή πακέτων του NodeJs. Ο διαχειριστής πακέτων παρέχει ένα εργαλείο γραμμής-εντολών (command-line tool) όπου ο χρήστης μπορεί να εγκαθιστά και να διαχειρίζεται τα πακέτα αυτά. H αναζήτηση τέτοιων πακέτων μπορεί να πραγματοποιηθεί είτε  μέσω της γραμμής εντολών είτε μέσω της σελίδας www.npmjs.org. Σε αυτήν την σελίδα παρουσιάζονται και διάφορα στατιστικά στοιχεία, όπως πόσα πακέτα υπάρχουν συνολικά, από ποια πακέτα εξαρτώνται περισσότερο άλλα πακέτα κ.λ.π. \cite{cantelon}
 
-		\subsubsection{Cloud και ασφάλεια Ιατρικών δεδομένων?}
 	\cite{Kaufm2009}	
+		
+		
+	\subsubsection{Ο Εξυπηρετητής (Server)}
+	
+		To NodeJs κάνει την δημιουργία διαφόρων τύπων εξυπηρετητών (servers) μια πολύ εύκολη διαδικασία καθώς στο NodeJs ο εξυπηρετητής και η εφαρμογή είναι το ίδιο.
+
 		
 	\subsection{Βάση Δεδομένων}
 	Στον τομέα της επιστήμης των υπολογιστών όταν αναφερόμαστε στον όρο NoSQL (Not Only SQL), μιλάμε για ένα ευρύ φάσμα συστημάτων διαχείρισης βάσεων δεδομένων τα οποία παρέχουν ένα μηχανισμό προς αποθήκευση και ανάκτηση δεδομένων διαφορετικό από αυτό του σχεσιακού μοντέλου των κλασσικών RDBMS (Relational database management system). Τα συστήματα NoSQL ξεφεύγουν από την παραδοσιακή χρήση πινάκων για την οργάνωση των δεδομένων και χρησιμοποιούν διαφορετικές δομές οργάνωσης όπως αυτή του κλειδιού-τιμής. Επιπροσθέτως η επεξεργασίά αυτών των δεδομένων δεν γίνεται με χρήση ερωτημάτων SQL όπως έχουμε συνηθίσει. Λόγω των εγγενών διαφορών μεταξύ των δύο αυτών συστημάτων, κάποιες λειτουργίες είναι ταχύτερες στα συστήματα NoSQL ενώ κάποιες άλλες στα συστήματα σχεσιακών βάσεων δεδομένων.
@@ -364,6 +373,7 @@
 			    \textbf{Αρχιτεκτονική}
 	 \\*
 		Κατά την εκκίνηση της εφαρμογής, το πρόγραμμα περιήγησης φορτώνει το HTML αρχείο και το παρσάρει στο DOM αρχείο, και μαζί με αυτό στο angular.js script. Μόλις το DOM αρχείο έχει φορτωθεί, το AngularJS αναζητά την εντολή ng-app η οποία ορίζει τα όρια της εφαρμογής. Εάν ορίζεται κάποιο module μέσα στην οδηγία, τότε χρησιμοποιείται για να ρυθμιστεί το \$injector, που δημιουργεί τo \$compile service καθώς και το \$ rootScope. Τότε μεταγλωττίζεται το DOM και συνδέεται στο \$ rootScope μετά από το οποίο εκτελούνται οι υπόλοιπες εντολές (αν υπάρχουν). Στο σχήμα \ref{fig:angularjs} φαίνεται ο κύκλος εκκίνησης του AngularJS.
+		
 	  \begin{figure}[h]
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{angularjs.png}
@@ -426,6 +436,23 @@
 
 		
 	\subsection{Jade Template Engine}
+	
+
+	Μια μηχανή πρότυπο είναι μια βιβλιοθήκη ή ένα framework που χρησιμοποιεί ορισμένους κανόνες ή συγκεκριμένη γλώσσα για να ερμηνεύσει τα δεδομένα και να παρουσιάσει τα views. Στην περίπτωση των διαδικτυακών εφαρμογών, τα  views είναι σελίδες HTML (ή τμήματα αυτών), αλλά γενικότερα μπορεί να είναι JSON ή XML αρχεία, ή graphic user interfaces στην περίπτωση προγράμματα  για την επιφάνειας εργασίας. Με βάση το μοντέλο Model-View-Controller (MVC), τα πρότυπα ανήκουν στα views.
+
+		Υπάρχουν πολλοί λόγοι που οδηγούν στην χρήση μιας μηχανή προτύπων αντί για την γραφή του front-end κώδικα σε μια συγκεκριμένη γλώσσα. Το μεγάλο πλεονέκτημα αυτής της προσέγγισης, είναι ότι παρουσιάζει HTML στην πλευρά του εξυπηρετητή (server), την οποία στέλνει στον πελάτη (client) και στη συνέχεια όταν ο πελάτης αλληλεπιδράσει με τη σελίδα και η HTML αλλάξει χρησιμοποιώντας τα ίδια bits του πρότυπου και ίσως ακόμη και κάποια κοινή λογική. Άλλοι πολύ σημαντικοί λόγοι αποτελούν η συνέπεια του κώδικα και η οργάνωση.  Εάν υπάρχει καλός διαχωρισμός της σήμανσης (markup) από τη λογική γίνεται πιο εύκολος ο εντοπισμός σφαλμάτων του κώδικα, η κοινή χρήση του κώδικα με συνεργάτες,καθώς και επιτυγχάνεται ταχύτερη ανάπτυξη μέσω της απόκτησης κοινών μεθόδων για την έξοδο της σήμανσης (markup). Οι μηχανές προτύπων που λειτουργούν, εξίσου καλά και από την πλευρά του εξυπηρετητή (server), όπως και από την πλευρά του πελάτη (client) αξιοποιούν το πλεονέκτημα ότι της ισομορφικής JavaScript, δηλαδή την δυνατότητα που υπάρχει να τρέξει ο ίδιος κώδικας παντού.
+	\cite{jade}
+
+		Η μηχανή προτύπων Jade (Jade Template Engine)  είναι μία μηχανή υψηλής απόδοσης η οποία έχει επηρεαστεί σε μεγάλο βαθμό από το Haml και υλοποιήθηκε με χρήση Javascript για το NodeJs. Η μηχανή Jade παράγει HTML, που χρησιμοποιείται στο πρόγραμμα περιήγησης στην πλευρά του εξυπηρετητή (server-side). Το πρόγραμμα περιήγησης(browser) εκτελεί μια αίτηση στον web-server, ο web-server εκτελεί την Jade, η οποία θα δημιουργήσει το HTML που θα πρέπει να σταλεί στον browser. Η μηχανή προτύπων Jade χρησιμοποιεί τα κενά και τις εσοχές ως μέρος της γλώσσας. Παράγει αυτόματα συμβατή σήμανση (markup) που βασίζεται σε μια ένθετη ιεραρχία με αναγνωριστικά ονόματα (tag names). Η μηχανή προτύπων Jade χρησιμοποιείται σε συνδυασμό με το framework ExpressJs σε πλατφόρμες ανάπτυξης NodeJs.
+
+Τα πλεονεκτήματα της μηχανής προτύπων Jade είναι η ταχεία ανάπτυξη που εξασφαλίζεται, η συνοχή του παραγώμενου κώδικα και τα κοινά πρότυπα συμμόρφωσης. Επιπλέον μας προσφέρει την δυνατότητα να δημιουργήσουμε αμέτρητο αριθμό σελίδων δυναμικά με ένα ενιαίο πρότυπο. Τέλος, όταν προκύψει η ανάγκη να πραγματοποιηθεί μία αλλαγή , μπορεί  να αλλάξει ο κώδικας σε ένα μόνο σημείο και να εμφανισθεί σε όλες τις απαιτούμενες σελίδες. Στο σχήμα \ref{fig:jade}	φαίνεται ένα παράδειγμα γραφής σε μηχανή προτύπων Jade.
+	
+  \begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{jade.png}
+	    \caption{Παράδειγμα γραφής Jade Template Engine.}
+	    \label{fig:jade}
+	\end{figure}
 	
 	
 	\subsection{Mockups}
