fix merge conflict errors

--- a/references.bib
+++ b/references.bib
@@ -24,9 +24,9 @@
 }
 
 @Book{silberschatz,
-  Title                    = {Operating System
-Concepts},
-  Author                   = {Abraham Silberschatz, Peter Baer Galvin, Greg Gagne},
+  Title                    = {Operating System Concepts},
+  Author                   = {Abraham Silberschatz, Peter Baer Galvin},
+  Publisher                = {Wiley},
   Year                     = {2005},
 
   Owner                    = {revekka},
@@ -748,6 +748,7 @@ Timothy Grance},
 @Article{grazioli2014mapping,
   Title                    = {Mapping relational databases into a distributed NoSQL},
   Author                   = {GRAZIOLI, FRANCESCO},
+  Journal                  = {Politecnico di Milano},
   Year                     = {2014},
 
   Publisher                = {Italy}
@@ -1039,6 +1040,7 @@ Timothy Grance},
   Year                     = {2000},
   Number                   = {8},
   Pages                    = {16--19},
+  Volume                   = {33},
 
   Publisher                = {IEEE}
 }
@@ -1175,9 +1177,19 @@ Timothy Grance},
   Url                      = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2440532/}
 }
 
+@Electronic{jade,
+  Title                    = {To Engineers Who Tried to Use Jade Template Engine and Can’t Get Started},
+  Author                   = {Azat Mardan},
+  Url                      = {http://webapplog.com/jade/},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.14}
+}
+
 @Book{cantelon,
   Title                    = {Node.js in Action},
-  Author                   = {Mike Cantelon, Marc Harter, T. J. Holowaychuk, Nathan Rajlich,},
+  Author                   = {Mike Cantelon, Marc Harter},
+  Publisher                = {Manning Publications},
   Year                     = {2013},
 
   Owner                    = {revekka},
@@ -1756,13 +1768,5 @@ URN: urn:nbn:de:0114-fqs0501297},
 
   Owner                    = {revekka},
   Timestamp                = {2015.10.12}
-}
-
-@Electronic{jade,
-  Title                    = {To Engineers Who Tried to Use Jade Template Engine and Can’t Get Started},
-  Url                      = {http://webapplog.com/jade/},
-
-  Owner                    = {revekka},
-  Timestamp                = {2015.10.14}
 }
 
