NoSQL vs RDBMS trends

--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -284,9 +284,18 @@
 
 		
 	\subsection{Βάση Δεδομένων}
+	Στο παρόν κεφάλαιο κάνουμε μια σύντομη αναφορά στα διάφορα συστήματα βάσεων δεδομένων τύπου NoSQL, τα πλεονεκτήματα τους καθώς και τις εφαρμογές για τις οποίες ενδείκνυται η χρήση τους.
+	
 	Η ιδέα ενός συστήματος βάσης δεδομένων τύπου NoSQL παρουσιάστηκε για πρώτη φορά το 1998 χωρίς να προχωρήσει όμως ιδιαίτερα και επανήλθε πάλι στο προσκήνιο το 2009, όταν και αναπτύχθηκαν αρκετές NoSQL λύσεις \cite{5993686}. Γεγονός το οποίο καθιστά τα συστήματα NoSQL καινούργια σε σχέση πάντα με τις σχεσιακές βάσεις δεδομένων που απαριθμούν 4 δεκαετίες ιστορίας \cite{Codd:1970:RMD:362384.362685}. Να δοθεί κάποιος ορισμός για τον όρο NoSQL δεν αποτελεί απλή διαδικασία δεδομένου ότι δεν αναφέρεται σε ένα συγκεκριμένο σύστημα διαχείρισης βάσεων δεδομένων, αλλά αποτελεί έναν γενικό όρο που περικλείει πολλά συστήματα βάσεων δεδομένων.
 	
 	Για να γίνουμε πιο συγκεκριμένοι, στον τομέα της επιστήμης των υπολογιστών όταν αναφερόμαστε στον όρο NoSQL (Not Only SQL), μιλάμε για ένα ευρύ φάσμα συστημάτων διαχείρισης βάσεων δεδομένων τα οποία παρέχουν ένα μηχανισμό προς αποθήκευση και ανάκτηση δεδομένων διαφορετικό από αυτό του σχεσιακού μοντέλου των κλασσικών RDBMS (Relational database management system)\cite{Cattell:2011:SSN:1978915.1978919}\cite{6106531}. Τα συστήματα NoSQL ξεφεύγουν από την παραδοσιακή χρήση πινάκων για την οργάνωση των δεδομένων και χρησιμοποιούν διαφορετικές δομές οργάνωσης όπως αυτή του κλειδιού-τιμής. Επιπροσθέτως η επεξεργασίά αυτών των δεδομένων δεν γίνεται με χρήση ερωτημάτων SQL όπως έχουμε συνηθίσει. Λόγω των εγγενών διαφορών μεταξύ των δύο αυτών συστημάτων, κάποιες λειτουργίες είναι ταχύτερες στα συστήματα NoSQL ενώ κάποιες άλλες στα συστήματα σχεσιακών βάσεων δεδομένων.
+	
+	\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=1\textwidth]{nosql_vs_rdbms.png}
+	    \caption{Τάση αναζητήσεων Google για NoSQL σε σύγκριση με RDBMS}
+	    \label{fig:NoSQL-DBs}
+	\end{figure}
 	
 	Η χρήση των βάσεων δεδομένων τύπου NoSQL έχει γνωρίσει ραγδαία αύξηση τα τελευταία χρόνια σε εφαρμογές big data καθώς και σε εφαρμογές πραγματικού χρόνου. Αποκαλούνται με τον όρο Not Only SQL για να δοθεί έμφαση στο γεγονός ότι οι δύο τεχνολογίες δεν είναι αμοιβαία αποκλειόμενες. Έχουν την δυνατότητα να συνυπάρχουν, κρατώντας τα δυνατά σημεία της κάθε μιας, προσφέροντας σε διαφορετικές καταστάσεις διαφορετικές υπηρεσίες. Οι βάσεις δεδομένων τύπου NoSQL χρησιμοποιούνται από τις εταιρείες κολοσσούς του τεχνολογικού τομέα όπως το Facebook, Amazon, Google, LinkedIn\cite{5993686}. Ο όγκος των δεδομένων που διαχειρίζονται τέτοιες εταιρείες είναι της τάξης πολλών petabyte και επομένως θα ήταν αδύνατη η κλιμάκωσή τους με κάποιο σχεσιακό σύστημα ΒΔ. Κι αυτό γιατί οι σχεσιακές ΒΔ συναντούν περιορισμούς όσον αφορά την αντιμετώπιση προβλημάτων όπως είναι η εξόρυξη δεδομένων, το Web 2.0, το cloud computing, τα μη γραμμικά σε εκτέλεση ερωτήματα κτλπ.
 	
