Horizontal and Vertical Scaling of DBMSs

--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -375,7 +375,34 @@
 		Αντιθέτως, οι NoSQL βάσεις είναι πολύ ευέλικτες και έχουν χαλαρούς (ή και ανύπαρκτους) περιορισμούς όσον αφορά το μοντέλο δεδομένων. Είναι σχεδιασμένες να επιτρέπουν την εισαγωγή δεδομένων χωρίς την ύπαρξη προκαθορισμένου σχήματος. Έτσι, οι σημαντικές αλλαγές που χρειάζονται γίνονται σε πραγματικό χρόνο, χωρίς την ανησυχία για διακοπή της λειτουργίας της βάσης. Επομένως η ανάπτυξη καθίσταται γρηγορότερη, η ενσωμάτωση κώδικα πιο αξιόπιστη και χρειάζεται λιγότερη ώρα ενασχόλησης του διαχειριστή της βάσης\cite{stonebraker2010sql}.
 		
 		\subsubsection{Κλιμάκωση}
-		Είναι ίσως το πιο σημαντικό χαρακτηριστικό των NoSQL βάσεων. Όταν οι επισκέψεις σε ένα site γίνονται μερικές εκατοντάδες ή και χιλιάδες το δευτερόλεπτο, μία σχεσιακή βάση θα έπρεπε να είναι διαμοιρασμένη και αναπαραγμένη σε μεγάλο βαθμό για να καταφέρει να ανταποκριθεί. Μία NoSQL βάση όμως, λόγω της κατανεμημένης της φύσης, το μόνο που χρειάζεται για σωστή κλιμάκωση, είναι προσθήκη υπολογιστών στο σύμπλεγμα (cluster). Δε χρειάζεται ούτε σπατάλη του χρόνου του διαχειριστή της βάσης, ούτε πολύπλοκος κώδικας για partitioning και replication. Ιδιαίτερα με τις νέες τεχνολογίες του cloud και των virtual machines, η κλιμάκωση είναι ιδιαίτερα εύκολη και φθηνή λύση\cite{stonebraker2010sql}.
+		Είναι ίσως το πιο σημαντικό χαρακτηριστικό των NoSQL βάσεων. Όταν οι επισκέψεις σε ένα site γίνονται μερικές εκατοντάδες ή και χιλιάδες το δευτερόλεπτο, μία σχεσιακή βάση θα έπρεπε να είναι διαμοιρασμένη και αναπαραγμένη σε μεγάλο βαθμό για να καταφέρει να ανταποκριθεί. Μία NoSQL βάση όμως, λόγω της κατανεμημένης της φύσης, το μόνο που χρειάζεται για σωστή κλιμάκωση, είναι προσθήκη υπολογιστών στο σύμπλεγμα (cluster). Δε χρειάζεται ούτε σπατάλη του χρόνου του διαχειριστή της βάσης, ούτε πολύπλοκος κώδικας για partitioning και replication. Ιδιαίτερα με τις νέες τεχνολογίες του cloud και των virtual machines, η κλιμάκωση είναι ιδιαίτερα εύκολη και φθηνή λύση\cite{stonebraker2010sql}. Σε αυτό το σημείο θα πρέπει να αναφερθεί ότι για την κλιμάκωση μιας βάσης δεδομένων υπάρχουν δύο επιλογές α)κατακόρυφη, β)οριζόντια κλιμάκωση. Κατακόρυφη σημαίνει να αυξάνονται συνεχώς οι δυνατότητες των υπαρχόντων εξυπηρετητών ενώ οριζόντια σημαίνει απλά προσθήκη υπολογιστών στο σύμπλεγμα όπως αναφέρθηκε και παραπάνω.
+		
+		\begin{itemize}
+			\item {\textbf{Κατακόρυφη κλιμάκωση}}\\
+			Στο επίπεδο της εφαρμογής της αρχιτεκτονικής διαδικτύου τριών επιπέδων, η οριζόντια κλιμάκωση ήταν η προεπιλεγμένη λύση για πολλά χρόνια και λειτουργούσε πολύ καλά. Καθώς όλο και περισσότεροι άνθρωποι χρησιμοποιούν μια εφαρμογή, περισσότεροι εξυπηρετητές του εμπορίου προστίθενται στο επίπεδο της εφαρμογής, η απόδοση διατηρείται με την κατανομή του φόρτου εργασίας σε ένα αυξημένο αριθμό εξυπηρετητών και το κόστος κλιμακώνεται γραμμικά σε σχέση με τον αριθμό των χρηστών
+			
+	\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=1\textwidth]{RDBMS_scales_up.jpg}
+	    \caption{Κλιμακωσιμότητα RDBMS}
+	    \label{fig:RDBMS_scales_up}
+	\end{figure}	
+			
+			Πριν από τις NoSQL βάσεις δεδομένων, η προεπιλεγμένη προσέγγιση ως προς την κλιμάκωση στο επίπεδο της βάσης δεδομένων ήταν η κατακόρυφη κλιμάκωση. Αυτό υπαγορευόταν από τη θεμελιωδώς συγκεντρωτική αρχιτεκτονική της σχεσιακής τεχνολογίας βάσεων δεδομένων. Για την υποστήριξη περισσότερων ταυτόχρονων χρηστών και/ή την αποθήκευση περισσότερων δεδομένων, χρειάζονται όλο και υψηλότερων δυνατοτήτων εξυπηρετητές με περισσότερους επεξεργαστές, περισσότερη μνήμη και περισσότερο αποθηκευτικό χώρο για όλους τους πίνακες. Οι μεγάλοι εξυπηρετητές τείνουν να είναι πολύ πολύπλοκοι, ιδιοταγείς και δυσανάλογα ακριβοί εν αντιθέσει με αυτούς του εμπορίου.	
+				
+		\item {\textbf{Οριζόντια κλιμάκωση}}\\		
+		Οι NoSQL βάσεις δεδομένων αναπτύχθηκαν εξ αρχής ώστε να είναι κατανεμημένες και να ευνοούν την οριζόντια κλιμάκωση. Χρησιμοποιούν ένα σύμπλεγμα τυπικών, φυσικών ή εικονικών εξυπηρετητών για να αποθηκεύουν δεδομένα και να υποστηρίζουν τις λειτουργίες της βάσης δεδομένων. Για κλιμάκωση, επιπλέον εξυπηρετητές προστίθενται στο σύμπλεγμα και τα δεδομένα και οι λειτουργίες της βάσης δεδομένων μοιράζονται στο μεγαλύτερο σύμπλεγμα. Επίσης, επειδή οι εξυπηρετητές του εμπορίου αναμένεται να παρουσιάσουν σφάλματα ανά κάποια χρονικά διαστήματα, οι βάσεις δεδομένων NoSQL έχουν δημιουργηθεί έτσι ώστε να είναι ανεκτικές και να ανακάμπτουν από τέτοια προβλήματα και αυτό τις καθιστά πολύ ανθεκτικές. Οι NoSQL βάσεις δεδομένων παρέχουν μια πολύ ευκολότερη και γραμμική προσέγγιση στην κλιμάκωση των βάσεων δεδομένων. Για κάθε 10,000 νέους χρήστες που αρχίζουν να χρησιμοποιούν μια εφαρμογή, τότε πρέπει απλά να προστεθεί μια ένας νέος εξυπηρετητής βάσης δεδομένων στο σύμπλεγμα. Με αυτόν τον τρόπο η εφαρμογή δεν χρειάζεται τροποποίηση καθώς αυτή βλέπει συνέχεια μόνο μια (κατανεμημένη) βάση δεδομένων.
+		
+	\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=1\textwidth]{nosql_scales_out.jpg}
+	    \caption{Κλιμακωσιμότητα NoSQL}
+	    \label{fig:nosql_scales_out}
+	\end{figure}
+	
+	Μια κατανεμημένη προσέγγιση οριζόντιας κλιμάκωσης επίσης συνήθως καταλήγει να είναι φθηνότερη από την εναλλακτική κατακόρυφης κλιμάκωσης. Αυτό είναι συνέπεια του ότι οι μεγάλοι, πολύπλοκοι και ανεκτικοί στα σφάλματα εξυπηρετητές έχουν υψηλά κόστη σχεδιασμού, κατασκευής και συντήρησης. Τα κόστη των αδειών των εμπορικών σχεσιακών βάσεων δεδομένων μπορεί επίσης να είναι απαγορευτικό λόγω του ότι κοστολογούνται θεωρώντας ότι θα χρησιμοποιηθεί ένας μόνο εξυπηρετητής. Από την άλλη, οι βάσεις δεδομένων NoSQL είναι γενικά ανοιχτού κώδικα, κοστολογούνται με βάση το ότι θα χρησιμοποιηθούν σε ένα σύμπλεγμα εξυπηρετητών και είναι σχετικά οικονομικές.		
+		
+		\end{itemize}
 		
 		\subsubsection{Ενσωματωμένο caching}
 		Οι περισσότερες NoSQL βάσεις παρέχουν τεχνολογίες ενσωματωμένου caching. Τα συχνά χρησιμοποιούμενα δεδομένα αποθηκεύονται στη μνήμη όσο το δυνατόν περισσότερο και επομένως η επικοινωνία με το δίσκο ελαχιστοποιείται. Έτσι δεν υπάρχει η ανάγκη για ξεχωριστό επίπεδο caching, ενώ στις περισσότερες SQL βάσεις χρειάζεται ξεχωριστή υποδομή για να επιτευχθεί κάτι τέτοιο\cite{stonebraker2010sql}.
