Jade example from figure to code

--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -294,7 +294,7 @@
 	    \centering
 	    \includegraphics[width=1\textwidth]{nosql_vs_rdbms.png}
 	    \caption{Τάση αναζητήσεων Google για NoSQL σε σύγκριση με RDBMS}
-	    \label{fig:NoSQL-DBs}
+	    \label{fig:NoSQL_vs_rdbms_google}
 	\end{figure}
 	
 	Η χρήση των βάσεων δεδομένων τύπου NoSQL έχει γνωρίσει ραγδαία αύξηση τα τελευταία χρόνια σε εφαρμογές big data καθώς και σε εφαρμογές πραγματικού χρόνου. Αποκαλούνται με τον όρο Not Only SQL για να δοθεί έμφαση στο γεγονός ότι οι δύο τεχνολογίες δεν είναι αμοιβαία αποκλειόμενες. Έχουν την δυνατότητα να συνυπάρχουν, κρατώντας τα δυνατά σημεία της κάθε μιας, προσφέροντας σε διαφορετικές καταστάσεις διαφορετικές υπηρεσίες. Οι βάσεις δεδομένων τύπου NoSQL χρησιμοποιούνται από τις εταιρείες κολοσσούς του τεχνολογικού τομέα όπως το Facebook, Amazon, Google, LinkedIn\cite{5993686}. Ο όγκος των δεδομένων που διαχειρίζονται τέτοιες εταιρείες είναι της τάξης πολλών petabyte και επομένως θα ήταν αδύνατη η κλιμάκωσή τους με κάποιο σχεσιακό σύστημα ΒΔ. Κι αυτό γιατί οι σχεσιακές ΒΔ συναντούν περιορισμούς όσον αφορά την αντιμετώπιση προβλημάτων όπως είναι η εξόρυξη δεδομένων, το Web 2.0, το cloud computing, τα μη γραμμικά σε εκτέλεση ερωτήματα κτλπ.
@@ -564,15 +564,8 @@
 
 		Η μηχανή προτύπων Jade (Jade Template Engine)  είναι μία μηχανή υψηλής απόδοσης η οποία έχει επηρεαστεί σε μεγάλο βαθμό από το Haml και υλοποιήθηκε με χρήση Javascript για το NodeJs. Η μηχανή Jade παράγει HTML, που χρησιμοποιείται στο πρόγραμμα περιήγησης στην πλευρά του εξυπηρετητή (server-side). Το πρόγραμμα περιήγησης(browser) εκτελεί μια αίτηση στον web-server, ο web-server εκτελεί την Jade, η οποία θα δημιουργήσει το HTML που θα πρέπει να σταλεί στον browser. Η μηχανή προτύπων Jade χρησιμοποιεί τα κενά και τις εσοχές ως μέρος της γλώσσας. Παράγει αυτόματα συμβατή σήμανση (markup) που βασίζεται σε μια ένθετη ιεραρχία με αναγνωριστικά ονόματα (tag names). Η μηχανή προτύπων Jade χρησιμοποιείται σε συνδυασμό με το framework ExpressJs σε πλατφόρμες ανάπτυξης NodeJs.
 
-Τα πλεονεκτήματα της μηχανής προτύπων Jade είναι η ταχεία ανάπτυξη που εξασφαλίζεται, η συνοχή του παραγώμενου κώδικα και τα κοινά πρότυπα συμμόρφωσης. Επιπλέον μας προσφέρει την δυνατότητα να δημιουργήσουμε αμέτρητο αριθμό σελίδων δυναμικά με ένα ενιαίο πρότυπο. Τέλος, όταν προκύψει η ανάγκη να πραγματοποιηθεί μία αλλαγή , μπορεί  να αλλάξει ο κώδικας σε ένα μόνο σημείο και να εμφανισθεί σε όλες τις απαιτούμενες σελίδες. Στο σχήμα \ref{fig:jade}	φαίνεται ένα παράδειγμα γραφής σε μηχανή προτύπων Jade.
-	
-  \begin{figure}[h]
-	    \centering
-	    \includegraphics[width=0.7\textwidth]{jade.png}
-	    \caption{Παράδειγμα γραφής Jade Template Engine.}
-	    \label{fig:jade}
-	\end{figure}
-	
+Τα πλεονεκτήματα της μηχανής προτύπων Jade είναι η ταχεία ανάπτυξη που εξασφαλίζεται, η συνοχή του παραγώμενου κώδικα και τα κοινά πρότυπα συμμόρφωσης. Επιπλέον μας προσφέρει την δυνατότητα να δημιουργήσουμε αμέτρητο αριθμό σελίδων δυναμικά με ένα ενιαίο πρότυπο. Τέλος, όταν προκύψει η ανάγκη να πραγματοποιηθεί μία αλλαγή , μπορεί  να αλλάξει ο κώδικας σε ένα μόνο σημείο και να εμφανισθεί σε όλες τις απαιτούμενες σελίδες. Παρακάτω	φαίνεται ένα παράδειγμα γραφής σε μηχανή προτύπων Jade.
+	\lstinputlisting[language=JavaScript]{jade_example.jade}
 	
 	\subsection{Mockups}
 	\subsection{Διασύνδεση με Social Networks}
